<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.bottomnavigationview.ui.home.HomeFragment"
        android:label="@string/homeFragmentLabel"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/noteListFragment"
        android:name="com.example.bottomnavigationview.ui.noteList.NoteListFragment"
        android:label="@string/noteListFragmentLabel"
        tools:layout="@layout/fragment_note_list" />
    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.example.bottomnavigationview.ui.weather.WeatherFragment"
        android:label="@string/weatherFragmentLabel"
        tools:layout="@layout/fragment_weather" />
</navigation>